# vagntavla

./: Cargo.toml  Dockerfile  README.md
src/: configuration.rs  main.rs  vasttrafik.rs
static/css/: overrides.css
templates/: base.html.tera  form.html.tera  index.html.tera
