[package]
name = "vagntavla"
version = "0.1.0"
authors = ["Daniel Josefsson <daniel.josefsson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rocket = "0.4.5"
tera = "1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]
